--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,11 @@ fabric.properties
 /NN_linreg_tf/tablets_training.csv
 /NN_linreg_tf/tablets_testing.csv
 *.h5
+
+/keras_regression/.idea/
+/keras_regression/results/
+/keras_regression/model/
+/keras_regression/archive/
+/keras_regression/__pycache__/
+/keras_regression/tablets_training.csv
+/keras_regression/tablets_testing.csv
